# customer-service-agent

./: .env.example  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: design.md
src/customer_service_agent/: agent.py  api.py  cli.py  config.py
src/customer_service_agent/memory/: __init__.py  checkpointer.py  sqlite_memory.py
src/customer_service_agent/models/: __init__.py  schemas.py
src/customer_service_agent/tools/: __init__.py  handoff.py  orders.py  policy.py  returns.py
tests/: __init__.py  test_tools.py
