[project]
name = "customer-service-agent"
version = "0.1.0"
description = "基于 LangChain 的电商售后客服 Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "openai>=2.37.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[project.scripts]
csa = "customer_service_agent.cli:main"
customer-service-agent = "customer_service_agent.cli:main"

[tool.uv]
package = true
